# CellularAutomataRust

./: Cargo.toml  README.md
examples/game_of_life/: cell.rs  game_of_life.rs  main.rs
examples/langtons_ant/: main.rs
examples/wireworld/: cell.rs  main.rs  wireworld.rs
src/: cell.rs  default_game_runner.rs  default_window.rs  game.rs  game_board.rs  game_rules.rs  globals.rs  lib.rs  main.rs  util.rs
src/cell_engine/: cell.rs  default_game_runner.rs  game.rs  game_board.rs  game_rules.rs  lib.rs  rgba.rs  tests.rs  visuals.rs
src/cell_engine/game_board/: iter.rs
src/game_board/: detail.rs  game_board_impl.rs  iter.rs  mod.rs
