[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Tastaturtaste <joshua.moellers@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# debug = true

[profile.dev]
opt-level = 1

[dependencies]
winit = "0.25.0"
# winit_input_helper = "0.10.0"
pixels = "0.3.0"
rand = "0.8.3"
rayon = "1.5.0"
line_drawing = "0.8.0"
