[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Tastaturtaste <joshua.moellers@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
pixels = "0.9.0"
rand = "0.8.3"
rayon = "1.5.0"
line_drawing = "1.0.0"


[lib]
name = "cell_engine"
path = "src/cell_engine/lib.rs"

[[bin]]
name = "game_of_life"
path = "src/bin/game_of_life/main.rs"

[[bin]]
name = "wireworld"
path = "src/bin/wireworld/main.rs"

[[bin]]
name = "langtons_ant"
path = "src/bin/langtons_ant/main.rs"
