[package]
name = "cell-engine-rs"
version = "0.1.0"
authors = ["Tastaturtaste <joshua.moellers@gmx.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
pixels = "0.9.0"
rand = "0.8.3"
rayon = "1.5.0"
line_drawing = "1.0.0"
